k8s/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-monitor-operator
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-monitor-operator
  template:
    metadata:
      labels:
        app: pod-monitor-operator
    spec:
      serviceAccountName: pod-monitor-operator
      containers:
        - name: pod-monitor-operator
          image: pod-monitor-operator:latest
          imagePullPolicy: IfNotPresent
          command: ["/operator"]
