k8s/nacos-deployment.yaml
# k8s/nacos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.2.3
          ports:
            - containerPort: 8848
          volumeMounts:
            - name: nacos-data
              mountPath: /home/nacos/data
      volumes:
        - name: nacos-data
          persistentVolumeClaim:
            claimName: nacos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
spec:
  selector:
    app: nacos
  ports:
    - port: 8848
      targetPort: 8848
  type: ClusterIP
