k8s/seckill-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seckill-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seckill-go
  template:
    metadata:
      labels:
        app: seckill-go
    spec:
      containers:
        - name: seckill-go
          image: seckill-go:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: seckill-go-svc
spec:
  selector:
    app: seckill-go
  ports:
    - port: 8082
      targetPort: 8082
