k8s/istio-virtualservice-seckill-go.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: seckill-go-vs
spec:
  hosts:
    - "*"
  gateways:
    - couponkill-gateway
  http:
    - match:
        - uri:
            prefix: /seckill
      route:
        - destination:
            host: seckill-go-svc
            port:
              number: 8090
      retries:
        attempts: 2
        perTryTimeout: 2s
      timeout: 5s
